--- a/API/CodePulse.API/CodePulse.API/appsettings.json
+++ b/API/CodePulse.API/CodePulse.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodePulseConnectionString": "Server=DESKTOP-OH8AFIM\\SQLEXPRESS; Database=CodePulseDb; TrustServerCertificate=True; Trusted_Connection=true"
+  },
+  "Jwt": {
+    "Key": "gdfhdfgjhfgfgjfgjfgjdjfbvh5345bbhfghf",
+    "Issuer": "https://localhost:7268",
+    "Audience":"https://localhost:4200"
   }
 }
